--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,13 @@
       "dom.iterable",
       "esnext"
     ],
+    "paths":{
+      "*" : [
+        "*",
+        "node_modules/*",
+        "src/*"
+      ]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,7 +25,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src"
   },
   "include": [
     "src"
