--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "firebase": "^9.10.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
@@ -46,5 +47,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ansi-colors": "^4.1.3",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
+    "spreadsheet-to-json": "^2.0.0"
   }
 }
